--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,16 +3,24 @@
 - type: github
   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+# - type: twitter
+#   icon: "fa-brands fa-x-twitter"
+
+- type: linkedin
+  icon: "fa-brands fa-linkedin"
+  url: "https://www.linkedin.com/in/taeyoon-kim-477996262/"
+
+- type: website
+  icon: "fa-solid fa-laptop"
+  url: "https://c-gongja.github.io/TYWebv2/"
 
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
 
-- type: rss
-  icon: "fas fa-rss"
-  noblank: true
+# - type: rss
+#   icon: "fas fa-rss"
+#   noblank: true
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
