--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone: Asia/Shanghai
+timezone: America/Los_Angeles
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
@@ -30,9 +30,6 @@ github:
 
 twitter:
   username: twitter_username # change to your Twitter username
-
-linkedin:
-  username: linkedin_username # change to your Twitter username
 
 social:
   # Change to your full name.
